--- a/G00397072/package.json
+++ b/G00397072/package.json
@@ -19,7 +19,12 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/music-controls": "^5.41.0",
+    "@awesome-cordova-plugins/native-audio": "^5.41.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage-angular": "^3.0.6",
+    "cordova-plugin-music-controls2": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -41,6 +46,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -57,5 +63,11 @@
     "ts-node": "~8.3.0",
     "typescript": "~4.4.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-music-controls2": {},
+      "cordova-plugin-nativeaudio": {}
+    }
+  }
 }
